--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     },
     "devDependencies": {
         "@types/node": "^15.6.0",
+        "nodemon": "^2.0.15",
         "typescript": "^4.5.5"
     }
 }
